# utf8tok

./: CMakeLists.txt  LICENSE  README.md  graphemebreakproperty.inc  utf8tok.h
src/: benchmark.cpp  generator.cpp  generator.h  test.cpp  test_common.h
tests/: GraphemeTestGenerator.cs
